--- a/views/api.html
+++ b/views/api.html
@@ -58,7 +58,7 @@
                                         The original dataset is coming from <a href="http://www.nuforc.org/">The National UFO Reporting Center</a>. The data has been modified and augmented with location data, to allow location based searches.
                                         Note that the returned location data is in (lon, lat) format.
                                       </br>
-                                        An example of a visualization using this data can be found <a href="/">here</a>.
+                                        An example of a visualization using this data can be found <a href="http://ufo.joakimquach.com">here</a>.
                                     </p>
                                     <h2>Queries</h2>
                                     <p>
