--- a/public/css/api.css
+++ b/public/css/api.css
@@ -15,6 +15,10 @@ p{
   font-family: 'Open Sans', sans-serif !important;
 }
 
+input{
+  font-family: 'Open Sans', sans-serif !important;
+}
+
 h1,
 h2,
 h3,
