updated link to tab

--- a/views/api.html
+++ b/views/api.html
@@ -62,7 +62,7 @@
                                     </p>
                                     <h2>Queries</h2>
                                     <p>
-                                        The API has three base queries. Each base query has a subset of query parameters, see the <a href="#" onClick="changeTab('doc')">docs</a> for more info.
+                                        The API has three base queries. Each base query has a subset of query parameters, see the <a href="#" onClick="changeTab('doc')">docs</a> for more info, or explore the queries using the <a href="#" onClick="changeTab('query')">query creator</a>.
                                     </p>
                                     <h3>Search</h3>
                                     <p>
